# agentfoundry-ui

./: .gitignore  MANIFEST.in  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
src/: App.jsx  main.jsx  styles.css
src/agent_foundry_ui/: __init__.py  fastapi.py
src/agentfoundry_ui.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/api/: client.js
src/components/: AgentPickerDrawer.jsx  AgentTree.jsx  AnimatedMessageBody.jsx  ChatListSidebar.jsx  ChatPanel.jsx  Composer.jsx  ErrorBoundary.jsx  ExecutionSteps.jsx  KnowledgeUploadCard.jsx  LoadingScreen.jsx  MarkdownContent.jsx  MessageItem.jsx  MessageList.jsx  NavigationRail.jsx  ResponseStreamingCard.jsx  SettingsModal.jsx  ThemeToggle.jsx  TokenUsagePopover.jsx  UserIdentityCard.jsx
src/hooks/: useWorkspaceChat.js
src/lib/: aiPrompts.js  chatWorkspace.js  preferences.js  theme.js  time.js
