[project]
name = "agentfoundry-ui"
version = "0.1.0"
description = "Shared UI package and static asset bundle for AgentFoundry apps."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_foundry_ui*"]
exclude = ["tests*"]
namespaces = true

[tool.setuptools.package-data]
agent_foundry_ui = [
  "dist/index.html",
  "dist/assets/*",
]
